--- a/vite-project/src/components/Footer/Footer.css
+++ b/vite-project/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 2rem;
-  position: fixed;
+  /* position: fixed; */
   display: flex;
   justify-content: center;
   margin: 2rem auto;
