--- a/vite-project/src/pages/Home/Home.css
+++ b/vite-project/src/pages/Home/Home.css
@@ -22,13 +22,13 @@
   grid-gap: 25px 50px;
 }
 
-.modal-personagem {
+.modal-link {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .btn-delete {
@@ -75,6 +75,31 @@
   background: linear-gradient(#0688fa, #2dabf9);
 }
 
+.btn-visit,
+.btn-visit a {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  width: 15rem;
+  height: 3rem;
+  border-width: 1px;
+  color: #fff;
+  border-color: #566963;
+  font-weight: bold;
+  border-radius: 4px;
+  box-shadow: inset 0px 1px 3px 0px #91b8b3;
+  text-shadow: inset 0px -1px 0px #2b665e;
+  background: linear-gradient(#768d87, #6c7c7c);
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn-visit:hover {
+  background: linear-gradient(#6c7c7c, #768d87);
+}
+
 .form-update {
   position: relative;
   background-color: rgb(71, 71, 71);
@@ -115,41 +140,17 @@ input.form-id-update {
   background-color: #4b6cfd;
 }
 
-input.form-nome-update {
-  width: 17.2rem;
-  font-size: 1.5rem;
-  background-color: #4b6cfd;
-}
-
-input.form-constelacao-update {
-  width: 11.4rem;
-  font-size: 1.5rem;
-  background-color: #4b6cfd;
-}
-
-input.form-categoria-update {
-  width: 14rem;
-  font-size: 1.5rem;
-  background-color: #4b6cfd;
-}
-
-input.form-tecnica-update {
-  width: 15.5rem;
-  font-size: 1.5rem;
-  background-color: #4b6cfd;
-}
-
-input.form-idade-update {
+input.form-title-update {
   width: 17.5rem;
   font-size: 1.5rem;
   background-color: #4b6cfd;
 }
 
-
-
-
-
-
+input.form-url-update {
+  width: 20rem;
+  font-size: 1.5rem;
+  background-color: #4b6cfd;
+}
 
 @media (max-width: 1300px) {
   .card-list {
