--- a/vite-project/src/components/Card/Card.css
+++ b/vite-project/src/components/Card/Card.css
@@ -9,7 +9,7 @@
   border-radius: 8px;
   margin: 1rem;
   box-shadow: 0px 0px 15px rgba(89, 0, 253, 0.3);
-  background-color: rgb(48, 48, 48);
+  background-color: white;
 }
 
 .card-component:hover {
